# LongTermPlanner

./: .gitignore  CMakeLists.txt  LICENSE  LTPlanner.m  LTPlannerFcn.m  README.md  ltpTrajectory.m  lttPlanner.m  lttPlannerFcn.m  testLTPlanner.m  testLttPlanner.m  trajectory_planning.slx
.github/workflows/: IntegrationTests.yml  UnitTests.yml  ciPipeline.yml
codegen/lib/ltpTrajectory/: LTPlanner.cpp  LTPlanner.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  eig.cpp  eig.h  ltpTrajectory.cpp  ltpTrajectory.h  ltpTrajectory.lib  ltpTrajectory_data.cpp  ltpTrajectory_data.h  ltpTrajectory_initialize.cpp  ltpTrajectory_initialize.h  ltpTrajectory_rtw.bat  ltpTrajectory_rtw.mk  ltpTrajectory_rtw.rsp  ltpTrajectory_rtw_comp.rsp  ltpTrajectory_rtwutil.cpp  ltpTrajectory_rtwutil.h  ltpTrajectory_terminate.cpp  ltpTrajectory_terminate.h  ltpTrajectory_types.h  recip.cpp  recip.h  roots.cpp  roots.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sign.cpp  sign.h  sqrt.cpp  sqrt.h  (+14 more)
codegen/lib/ltpTrajectory/examples/: main.cpp  main.h
codegen/lib/ltpTrajectory/html/: report.mldatx
codegen/lib/ltpTrajectory/interface/: _coder_ltpTrajectory_api.c  _coder_ltpTrajectory_api.h  _coder_ltpTrajectory_info.c  _coder_ltpTrajectory_info.h  _coder_ltpTrajectory_mex.c  _coder_ltpTrajectory_mex.h
include/long_term_planner/: long_term_planner.h  roots.h
src/: long_term_planner.cc
tests/: debug_t_rel_issue.m  gridTestOneJoint.m  gridTestTimeScaling.m  randomConfiguration.m
tests/include/: long_term_planner_fixture.h
tests/src/: long_term_planner_tests.cc  roots_tests.cc
tests/unittests/: testGetStopPos.m  testOptBraking.m  testOptBreaking.m  testOptSwitchTimes.m  testTimeScaling.m
unittests/: gridTestOneJoint.m  testGetStopPos.m  testOptSwitchTimes.m
